tests/ui/failing/example-calendar.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/impl-trait/example-calendar.rs`
error[E0053]: method `steps_between` has an incompatible type for trait
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/impl-trait/example-calendar.rs:159:45
    |
159 |     fn steps_between(_: &Self, _: &Self) -> Option<usize> {
    |                                             ^^^^^^^^^^^^^ expected `(usize, std::option::Option<usize>)`, found `std::option::Option<usize>`
    |
    = note: expected signature `fn(&NaiveDate, &NaiveDate) -> (usize, std::option::Option<usize>)`
               found signature `fn(&NaiveDate, &NaiveDate) -> std::option::Option<usize>`
help: change the output type to match the trait
    |
159 |     fn steps_between(_: &Self, _: &Self) -> (usize, std::option::Option<usize>) {
    |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
